--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
         <div class="row">
             <div class="label">Student Name:</div>
-            <div class="value">Jaimin Ragyaguru</div>
+            <div class="value">Mehta Bhavy</div>
         </div>
 
         <div class="row">
             <div class="label">Enrollment Number:</div>
-            <div class="value">20230905090052</div>
+            <div class="value">20230905090047</div>
         </div>
 
         <div class="row">
