--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="row">
             <a href="ALA_1.html"><div class="label">ALA 1</div></a>
-            <a href="ALA_2.html"><div class="label">ALA 2</div></a>
+            <a href="https://bhavymehta21.github.io/ala2/"><div class="label">ALA 2</div></a>
             <a href="ALA_3.html"><div class="label">ALA 3</div></a>
         </div>
 
